# ontogpt

./: .cruft.json  .gitignore  404.html  CITATION.cff  LICENSE  MANIFEST.in  Makefile  README.md  _results.tsv  agranyas_stdout_0828  baldwin-teobaldo-key2  disease_cp_output.yaml  fmicb-12-651282__ontogpt_gpt4.5preview.txt  index.html  long_output.yaml  mkdocs.yml  output.yaml  output_100_0817.yaml  output_parser.py  output_parser_bulleted.py  output_parser_yaml.py  phenopacket_based_queries_results.tsv  phenopacket_time_based_queries_results.tsv  project.Makefile  pyproject.toml  sitemap.xml  tox.ini  txt_cases_results.tsv  txt_with_manual_annots_results.tsv  txt_without_discussion_results.tsv
.github/workflows/: deploy-docs.yml  pypi-publish.yml  qc.yml
all/: index.html
all/Action/: index.html
all/AdverseEffect/: index.html
all/AnnotatorResult/: index.html
all/Any/: index.html
all/BiologicalProcess/: index.html
all/CausalRelationship/: index.html
all/CellularProcess/: index.html
all/ChemicalEntity/: index.html
all/CompoundExpression/: index.html
all/Disease/: index.html
all/DiseaseCategory/: index.html
all/DiseaseTreatmentSummary/: index.html
all/Drug/: index.html
all/Environment/: index.html
all/EnvironmentalMaterial/: index.html
all/Evidence/: index.html
all/ExtractionResult/: index.html
all/FoodItem/: index.html
all/FoodType/: index.html
all/Gene/: index.html
all/GeneGeneInteraction/: index.html
all/GeneLocation/: index.html
all/GeneMolecularActivityRelationship/: index.html
all/GeneMolecularActivityRelationship2/: index.html
all/GeneOrganismRelationship/: index.html
all/GeneReactionPairing/: index.html
all/GeneSubcellularLocalizationRelationship/: index.html
all/GeneToReaction/: index.html
all/GoCamAnnotations/: index.html
all/Ingredient/: index.html
all/Inheritance/: index.html
all/Location/: index.html
all/Measurement/: index.html
all/Mechanism/: index.html
all/MendelianDisease/: index.html
all/MolecularActivity/: index.html
all/Molecule/: index.html
all/NamedEntity/: index.html
all/Onset/: index.html
all/Organism/: index.html
all/Pathway/: index.html
all/Publication/: index.html
all/Quantity/: index.html
all/Reaction/: index.html
all/ReactionDocument/: index.html
all/ReactionGrouping/: index.html
all/Recipe/: index.html
all/RecipeCategory/: index.html
all/RelationshipType/: index.html
all/SequencingTechnology/: index.html
all/Step/: index.html
all/Study/: index.html
all/Symptom/: index.html
all/TextWithTriples/: index.html
all/Treatment/: index.html
all/TreatmentAdverseEffect/: index.html
all/TreatmentEfficacy/: index.html
all/TreatmentMechanism/: index.html
all/Triple/: index.html
all/Unit/: index.html
all/UtensilType/: index.html
all/Variable/: index.html
all/abstract/: index.html
all/activities/: index.html
all/adverse_effects/: index.html
all/affects/: index.html
all/amount/: index.html
all/biological-process-template/: index.html
all/categories/: index.html
all/causal_relationships/: index.html
all/cause/: index.html
all/cellular_processes/: index.html
all/characteristic/: index.html
all/combined_text/: index.html
all/contraindications/: index.html
all/core/: index.html
all/decades/: index.html
all/description/: index.html
all/disease_onsets/: index.html
all/drugs/: index.html
all/effect/: index.html
all/efficacy/: index.html
all/environmental-metagenome/: index.html
all/environmental-sample/: index.html
all/environmental_material/: index.html
all/environments/: index.html
all/extracted_object/: index.html
all/food/: index.html
all/food_item/: index.html
all/full_text/: index.html
all/gene1/: index.html
all/gene2/: index.html
all/gene_activities/: index.html
all/gene_functions/: index.html
all_disease_grounding/: index.html
alzrd/: index.html
alzrd_section/: index.html
biological_process/: index.html
biotic_interaction/: index.html
cell_type/: index.html
class_enrichment/: index.html
coffee/: index.html
composite_disease/: index.html
condition/: index.html
core/: index.html
ctd/: index.html
ctd_ner/: index.html
custom/: index.html
data_sheets_schema/: index.html
datasheet/: index.html
desiccation/: index.html
diagnostic_procedure/: index.html
dietitian_notes/: index.html
docs/: custom.md  evaluations.md  functions.md  index.md  operation.md  owl_exports.md  setup.md  start_with_owl.md  troubleshooting.md
drug/: index.html
emapa_simple/: index.html
environmental_metadata/: index.html
environmental_sample/: index.html
environmental_sample_ungrounded/: index.html
error_analysis/: index.html
etc/: local.toml
evaluations/: index.html
figure/: index.html
foodon_simple/: index.html
functions/: index.html
gene_description_term/: index.html
gene_extraction/: index.html
genesummary/: index.html
go_simple/: index.html
go_terms/: index.html
go_terms_relational/: index.html
gocam/: index.html
gogo/: index.html
halo/: index.html
human_phenotype/: index.html
ibd/: index.html
ibd_literature/: index.html
kidney/: index.html
maxo/: index.html
mendelian_disease/: index.html
metabolic_process/: index.html
metagenome_study/: index.html
mondo_simple/: index.html
nmdc_schema_data/: index.html
notebooks/: BioEPIC_demo.ipynb  Enrichment-Results-Analysis.ipynb  Makefile  Quick-Examples.ipynb  output1.yaml  output2.yaml  output3.yaml  parse_msigdb.ipynb  text.txt  text2.txt
onto_usage/: index.html
ontology_class/: index.html
ontology_issue/: index.html
operation/: index.html
owl_exports/: index.html
phenotype/: index.html
reaction/: index.html
recipe/: index.html
search/: search_index.json
setup/: index.html
src/: settings.py
start_with_owl/: index.html
storms/: index.html
tests/: __init__.py
traits/: index.html
treatment/: index.html
troubleshooting/: index.html
util/: ctd-train2obo.pl  ctd-train2tsv.pl  ctd-train2yaml.pl  dump-omim2pmid.pl  filter-hpoa.pl
(+12874 files in other folders)
