[tool.poetry]
name = "ontogpt"
version = "1.0.0"
description = "OntoGPT"
authors = ["Chris Mungall <cjmungall@lbl.gov>", "J. Harry Caufield <jhc@lbl.gov>"]
license = "BSD-3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
"ruamel.yaml" = ">=0.17.31"
Jinja2 = {version = ">=3.1.2", optional = true}
aiohttp = ">=3.8.4"
beautifulsoup4 = ">=4.11.1"
bioc = ">=2.0"
cachier = ">=2.1.0"
click = ">=8.1.3"
fastapi = {version = ">=0.88.0", optional = true}
gilda = ">=1.0.0"
inflect = ">=6.0.2"
inflection = ">=0.5.1"
linkml = "^1.8.0"
linkml-owl = "^0.3.0"
myst-parser = {version = ">=0.18.1", extras = ["docs"], optional = true}
oaklib = ">=0.5.28"
pydantic = ">=2.4.0"
recipe-scrapers = {version = ">=14.35.0", extras = ["recipes"], optional = true}
requests = "^2.31.0"
requests-cache = ">=1.2.0"
sphinx = {version = ">=5.3.0", extras = ["docs"], optional = true}
sphinx-autodoc-typehints = {version = ">=1.19.4", extras = ["docs"], optional = true}
sphinx-click = {version = ">=4.3.0", extras = ["docs"], optional = true}
sphinx-rtd-theme = {version = ">=1.0.0", extras = ["docs"], optional = true}
textract = {version = "*", extras = ["textract"], optional = true}
textract-py3 = {version = "^2.0.1", extras = ["textract-py3"], optional = true}
tiktoken = "^0.7.0"
uvicorn = {version = ">=0.20.0", optional = true}
wikipedia = ">=1.4.0"
wikipedia-api = ">=0.5.8"
dpath = "^2.1.6"
toml = "^0.10.2"
urllib3 = "<2"
frontend = "^0.0.3"
litellm = "^1.37.14"
diskcache = "^5.6.3"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.2"
setuptools = ">=65.5.0"
tox = ">=3.25.1"
mkdocs-mermaid2-plugin = ">=0.6.0"

[tool.poetry.scripts]
ontogpt = "ontogpt.cli:main"
web-ontogpt = "ontogpt.webapp.main:start"

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinx-click",
    "myst-parser"
    ]
web = [
    "fastapi",
    "uvicorn",
    "Jinja2",
    "python-multipart"
]
recipes = [
    "recipe-scrapers"
]
textract = [
    "textract"
]
textract-py3 = [
    "textract-py3"
]

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
seaborn = "^0.12.2"
papermill = "^2.4.0"

[tool.poetry-dynamic-versioning]
enable = false
vcs = "git"
style = "pep440"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
reverse_relative = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
