[tool.poetry]
name = "ontogpt"
version = "1.0.13"
description = "OntoGPT"
authors = ["Chris Mungall <cjmungall@lbl.gov>", "J. Harry Caufield <jhc@lbl.gov>"]
license = "BSD-3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.13"
"ruamel.yaml" = ">=0.17.31"
Jinja2 = {version = ">=3.1.2", optional = true}
aiohttp = ">=3.8.4"
beautifulsoup4 = ">=4.11.1"
bioc = ">=2.0"
cachier = ">=2.1.0"
click = ">=8.1.3"
fastapi = {version = ">=0.115.0", extras = ["web"], optional = true}
gilda = ">=1.0.0"
inflect = ">=6.0.2"
inflection = ">=0.5.1"
linkml = "^1.8.3"
linkml-owl = "^0.3.0"
myst-parser = {version = ">=0.18.1", extras = ["docs"], optional = true}
oaklib = ">=0.5.28"
pydantic = ">=2.4.0"
python-multipart = {version = ">=0.0.7", extras = ["web"], optional = true}
recipe-scrapers = {version = ">=14.35.0", extras = ["recipes"], optional = true}
requests = "^2.31.0"
requests-cache = ">=1.2.0"
sphinx = {version = ">=5.3.0", extras = ["docs"], optional = true}
sphinx-autodoc-typehints = {version = ">=1.19.4", extras = ["docs"], optional = true}
sphinx-click = {version = ">=4.3.0", extras = ["docs"], optional = true}
sphinx-rtd-theme = {version = ">=1.0.0", extras = ["docs"], optional = true}
tiktoken = ">=0.7.0"
uvicorn = {version = ">=0.20.0", optional = true}
wikipedia = ">=1.4.0"
wikipedia-api = ">=0.5.8"
dpath = "^2.1.6"
toml = "^0.10.2"
urllib3 = "<2"
frontend = "^0.0.3"
litellm = ">=1.44.28"
diskcache = "^5.6.3"
pymupdf = "^1.24.9"
scipy = [
    {version = "^1.13.0", python = "<3.13"},
    {version = "^1.14.1", python = ">=3.13"}
]
numpy = [
    {version = ">=1.23,<2.1", python = "<3.13"},
    {version = ">=2.0.0", python = ">=3.13"}
]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.1.2"
setuptools = ">=65.5.0"
tox = ">=3.25.1"
mkdocs-mermaid2-plugin = ">=0.6.0"
jupyter = "^1.0.0"
seaborn = "^0.12.2"
papermill = "^2.4.0"

[tool.poetry.scripts]
ontogpt = "ontogpt.cli:main"
web-ontogpt = "ontogpt.webapp.main:start"

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinx-click",
    "myst-parser"
    ]
web = [
    "fastapi",
    "uvicorn",
    "Jinja2",
    "python-multipart"
]
recipes = [
    "recipe-scrapers"
]

[tool.poetry-dynamic-versioning]
enable = false
vcs = "git"
style = "pep440"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
reverse_relative = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.codespell]
skip = '.git,*.pdf,*.svg,poetry.lock,output,*.tsv,./tests/input,old'
# some specific phrases, variables and mixed case (CamelCase etc)
ignore-regex = '\b(Torsades de pointes|[A-Z][a-zA-Z]*|[a-z]+[A-Z][a-zA-Z]*|de pointes)\b|\bcommments:'
ignore-words-list = 'langual,sting,infarction,holliday,cyclin,convertor,ser,collapsin,infarctions,euclidian,dependant,vrsatile,anc,disjointness'
