[project]
name = "ontogpt"
version = "1.0.18"
description = "OntoGPT is a Python package for extracting structured information from text with large language models (LLMs), instruction prompts, and ontology-based grounding."
readme = "README.md"
authors = [
    {name = "Chris Mungall", email = "cjmungall@lbl.gov"},
    {name = "J. Harry Caufield", email = "jhc@lbl.gov"},
]
license = {text = "BSD-3"}
requires-python = ">=3.9,!=3.9.7,<3.14"
dependencies = [
    "ruamel-yaml>=0.17.31",
    "aiohttp>=3.8.4",
    "beautifulsoup4>=4.11.1",
    "bioc>=2.0",
    "cachier>=2.1.0",
    "click>=8.1.3",
    "inflect>=6.0.2",
    "inflection>=0.5.1",
    "linkml>=1.9.3-rc1",
    "linkml-owl<1.0.0,>=0.3.0",
    "oaklib>=0.5.28",
    "pydantic>=2.4.0",
    "requests<3.0.0,>=2.31.0",
    "requests-cache>=1.2.0",
    "tiktoken>=0.7.0",
    "wikipedia>=1.4.0",
    "wikipedia-api>=0.5.8",
    "dpath<3.0.0,>=2.1.6",
    "toml>=0.10.2",
    "frontend>=0.0.3",
    "litellm[caching]>=1.44.28",
    "diskcache<6.0.0,>=5.6.3",
    "pymupdf<2.0.0,>=1.24.9",
    "scipy<2.0.0,>=1.13.0; python_version < \"3.13\"",
    "scipy<2.0.0,>=1.14.1; python_version >= \"3.13\"",
    "numpy<2.1,>=1.23; python_version < \"3.13\"",
    "numpy>=2.0.0; python_version >= \"3.13\"",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=7.1.2",
    "setuptools>=65.5.0",
    "tox>=3.25.1",
    "mkdocs-mermaid2-plugin>=0.6.0",
    "jupyter<2.0.0,>=1.0.0",
    "seaborn<1.0.0,>=0.12.2",
    "papermill<3.0.0,>=2.4.0",
]
web = [
    "Jinja2>=3.1.2",
    "fastapi>=0.115.0",
    "python-multipart>=0.0.7",
    "uvicorn>=0.20.0",
]
docs = [
    "myst-parser>=0.18.1",
    "sphinx>=5.3.0",
    "sphinx-autodoc-typehints>=1.19.4",
    "sphinx-click>=4.3.0",
    "sphinx-rtd-theme>=1.0.0",
]
recipes = [
    "recipe-scrapers>=14.35.0",
]
gilda = [
    "gilda>=1.0.0",
]

[project.scripts]
ontogpt = "ontogpt.cli:main"
web-ontogpt = "ontogpt.webapp.main:start"

[tool.uv]
default-groups = []
package = true

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
ontogpt = ["*.yaml"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py313"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
reverse_relative = true

[tool.codespell]
skip = '.git,*.pdf,*.svg,output,*.tsv,./tests/input,old'
# some specific phrases, variables and mixed case (CamelCase etc)
ignore-regex = '\b(Torsades de pointes|[A-Z][a-zA-Z]*|[a-z]+[A-Z][a-zA-Z]*|de pointes)\b|\bcommments:'
ignore-words-list = 'langual,sting,infarction,holliday,cyclin,convertor,ser,collapsin,infarctions,euclidian,dependant,vrsatile,anc,disjointness'
